# rdice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md
crates/rdice-cli/: Cargo.toml  README.md
crates/rdice-cli/src/: config.rs  main.rs  output.rs
crates/rdice-cli/tests/: cli_test.rs
crates/rdice-core/: Cargo.toml  README.md
crates/rdice-core/src/: die.rs  engine.rs  error.rs  expr.rs  lib.rs  tray.rs
crates/rdice-core/tests/: engine_test.rs  expr_test.rs
crates/rdice-tui/: Cargo.toml  README.md
crates/rdice-tui/src/: app.rs  command.rs  input.rs  lib.rs  main.rs  storage.rs  theme.rs  ui.rs
crates/rdice-tui/src/screens/: dice_manager.rs  history.rs  mod.rs  overview.rs  tray.rs  tray_manager.rs
crates/rdice-tui/tests/: app_test.rs  command_test.rs  history_test.rs  input_test.rs  manager_render_test.rs  overview_test.rs  storage_test.rs  ui_test.rs
docs/: ARCHITECTURE.md  RELEASING.md
docs/plan/: 2026-04-27-tui-implementation-plan.md
docs/spec/: 2026-04-27-tui-design.md
scripts/: release.sh
