[workspace]
members = [
    "crates/rdice-core",
    "crates/rdice-cli",
    "crates/rdice-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/nilzx/rdice"
homepage = "https://github.com/nilzx/rdice"

[workspace.dependencies]
rand = "0.10.1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1.1.2"
dirs = "6"
rdice-core = { version = "0.1.1", path = "crates/rdice-core" }
